# kaiwa-coach

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml  pytest.ini
docs/: KaiwaCoach_Implementation_Checklist_v1.1.md  KaiwaCoach_PRD_v2.1.md  KaiwaCoach_TDD_v1.1.md  configuration.md  feature_demos.md  llm_assisted_coding_learnings.md  model_integration_learnings.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  (+1 more)
scripts/: asr_smoke.py  llm_smoke.py  prefetch_models.py  setup_macos.sh  tts_smoke.py
tests/: test_api_conversations.py  test_api_monologue.py  test_api_narration.py  test_api_regen.py  test_api_settings.py  test_api_summary.py  test_api_translate.py  test_app_startup.py  test_app_ui.py  test_asr_whisper.py  test_audio_conversion.py  test_invariants.py  test_jp_katakana.py  test_jp_tts_normalisation.py  test_json_enforcement.py  test_llm_backends.py  test_llm_gemma.py  test_llm_qwen.py  test_model_factory.py  test_model_integration.py  test_model_protocols.py  test_orchestrator_conversations.py  test_orchestrator_monologue.py  test_orchestrator_narration.py  test_orchestrator_settings.py  test_orchestrator_summary.py  test_orchestrator_text_flow.py  test_prefetch_imports.py  test_prompt_loader.py  test_prompt_rendering_suite.py  test_prompt_schemas.py  test_protected_spans.py  test_sse_monologue.py  test_sse_turns.py  test_storage_blobs.py  test_storage_db.py  test_storage_roundtrip.py  test_storage_schema.py  test_tts_kokoro.py  test_tts_punctuation.py
(+100 files in other folders)
